--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,11 +23,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Animals</a>
                         </li>
-                         <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Animals">Animals</a>
-                    </li>
                     </ul>
                 </div>
             </div>
